# workshop-aberto-02

./: Dockerfile  README.md  app.py  arquivo  diferentes_arquivos.py  duckdb.db  exemplo.env  pipeline_00.py  pipeline_02.py  pyproject.toml
pasta_gdown/: vendas_05_01_2024.csv  vendas_06_01_2024.csv  vendas_07_01_2024.json  vendas_08_01_2024.parquet
sql/: analise_categoria.sql  analise_de_vendas.sql  create_table.sql  create_table_calculado.sql  insert_into.sql
